[project]
name = "vllm-qwen35-a3b"
version = "0.1.0"
description = "RunPod vLLM deployment script for Qwen3.5-35B-A3B"
requires-python = ">=3.10"
dependencies = [
    "runpod>=0.9.0",
    "requests>=2.31.0",
]

[project.scripts]
deploy-vllm = "deploy_qwen:main"

[tool.hatch.build.targets.wheel]
packages = ["deploy_qwen.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
